# cmdtest

./: .gitignore  .hgignore  CHANGES.txt  CMDTEST_example.yml  CMakeLists.txt  README.html  README.rst  README.txt  Rakefile  cmdtest.gemspec  replace_strings.pl  run-regression.rb
doc/: CMDTEST_example.rb  cmdtest.html  cmdtest.txt  rst.css
examples/: CMDTEST_gcc.rb  CMDTEST_ruby.rb  CMDTEST_simple.rb
lib/cmdtest/: argumentparser.rb  baselogger.rb  cmdeffects.rb  consolelogger.rb  fileinfo.rb  fssnapshot.rb  junitfile.rb  junitlogger.rb  lcs.rb  methodfilter.rb  notify.rb  output.rb  testcase.rb  util.rb  workdir.rb
python/: CMDTEST_example.py  Rakefile  cmdtest.py
python/t/: CMDTEST_as_module.py  CMDTEST_exit_nonzero.py  CMDTEST_exit_zero.py  CMDTEST_stdout_equal.py  as_module.py  selftest_utils.py
src/: clines.cpp
t/: 00-assert.rb  00-exit_nonzero.rb  00-exit_status.rb  00-exit_zero.rb  00-file_equal.rb  00-file_not_equal.rb  00-ignore_file.rb  00-import_file.rb  00-stderr_equal.rb  00-stderr_not_equal.rb  00-stdout_equal.rb  00-stdout_not_equal.rb  01-cmd.rb  01-misc.rb  01-simple.rb  CMDTEST_assert.rb  CMDTEST_chdir.rb  CMDTEST_cmd.rb  CMDTEST_cmdtest_skip.rb  CMDTEST_crnl.rb  CMDTEST_dont_ignore_files.rb  CMDTEST_exit_nonzero.rb  CMDTEST_exit_status.rb  CMDTEST_exit_zero.rb  CMDTEST_file_encoding.rb  CMDTEST_file_equal.rb  CMDTEST_file_not_equal.rb  CMDTEST_glob_files.rb  CMDTEST_ignore_file.rb  CMDTEST_ignore_output.rb  CMDTEST_import_directory.rb  CMDTEST_import_file.rb  CMDTEST_junit.rb  CMDTEST_misc.rb  CMDTEST_options.rb  CMDTEST_output_encoding.rb  CMDTEST_raise.rb  CMDTEST_readonly.rb  CMDTEST_setenv.rb  CMDTEST_shell.rb  (+9 more)
